--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,25 @@ aiohttp==3.7.3
 asgiref==3.3.1
 async-timeout==3.0.1
 attrs==20.3.0
+autopep8==1.5.4
+certifi==2020.12.5
 chardet==3.0.4
 click==7.1.2
 Django==3.1.4
+django-conn-pool==2.1.0
+flake8==3.8.4
 h11==0.11.0
 idna==2.10
+mccabe==0.6.1
 multidict==5.1.0
+mysqlclient==2.0.3
+pycodestyle==2.6.0
 pydantic==1.7.3
+pyflakes==2.2.0
 pytz==2020.5
+SQLAlchemy==1.3.22
 sqlparse==0.4.1
+toml==0.10.2
 typing-extensions==3.7.4.3
 uvicorn==0.13.3
 yarl==1.6.3
