--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ autopep8==1.5.4
 Django==3.1.4
 django-conn-pool==2.1.0
 django-redis==4.12.1
+email-validator==1.1.2
 flake8==3.8.4
 mysqlclient==2.0.3
 pydantic==1.7.3
