--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ email-validator==1.1.2
 flake8==3.8.4
 mysqlclient==2.0.3
 pydantic==1.7.3
+PyJWT==2.0.0
 redis==3.5.3
 SQLAlchemy==1.3.22
 uvicorn==0.13.3
