--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-cors-headers==3.6.0
 django-redis==4.12.1
 email-validator==1.1.2
 flake8==3.8.4
+lxml==4.6.2
 mysqlclient==2.0.3
 pydantic==1.7.3
 PyJWT==2.0.0
