--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==3.1.4
 django-cors-headers==3.6.0
 django-redis==4.12.1
 email-validator==1.1.2
+fake-useragent==0.1.11
 flake8==3.8.4
 lxml==4.6.2
 mysql-connector-python==8.0.23
